# The_Last_Siberia_TulaHack-2026

./: .env  .env.example  .gitignore  Fix-bd.md  README.md  docker-compose.yml  docker-compose.yml.bak  requirements.txt  test_api.sh
QA Service Lab/: ~$чет по тестированию.docx  (+1 more)
backend/: .env  .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  docker-compose.yml.bak  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
backend/app/: main.py
backend/app/api/v1/: __init__.py  assignments.py  audit_logs.py  auth.py  criteria.py  deadlines.py  evaluations.py  hackathons.py  public.py  results.py  roles.py  teams.py  users.py
backend/app/core/: config.py  database.py  security.py
backend/app/dependencies/: auth.py
backend/app/models/: __init__.py  audit_log.py  base.py  criterion.py  deadline.py  evaluation.py  evaluation_item.py  expert_team_assignment.py  hackathon.py  refresh_token.py  role.py  team.py  team_member.py  team_result.py  user.py
backend/app/schemas/: __init__.py  assignment.py  audit.py  auth.py  criterion.py  dashboard.py  deadline.py  evaluation.py  hackathon.py  public.py  result.py  role.py  team.py  user.py
backend/app/services/: audit_service.py  auth_service.py  scoring_service.py
backend/app/websocket/: leaderboard_ws.py
backend/database/: docker-compose.yml  docker-compose.yml.bak
backend/database/conf/: postgresql.conf
backend/database/init/: 00-plpgsql.sql  01-init.sql  02-seed.sql  03-indexes.sql  04-fix-status-migration.sql  05-fix-db.sql
backend/database/scripts/: healthcheck.sh  start.sh
backend/scripts/: logs.sh  migrate.sh  restart.sh  start.sh  stop.sh
backend/tests/: __init__.py  conftest.py  test_audit_service.py  test_auth_service.py  test_health.py  test_scoring_service.py  test_scoring_unit.py  test_security.py  test_unit_simple.py  test_validation.py  test_websocket.py
(+105 files in other folders)
